- test SchemaMapping, implement include and transformURI instructions - activate XmlPlugin when Resolver is used